[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pydataprotection"
version = "1.0"
description = "Unprotect ASP.NET Core's Data Protection in Python"
readme = "README.md"
urls = {Repository = "https://github.com/ivision-research/pydataprotection"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["cryptography"]
[tool.flit.module]
name = "dataprotection"
